[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
# web 框架
warp = "0.3"
# 异步运行时
tokio = { version = "1.1.1", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 文件反序列化
serde_json = "1.0"

# 子模块
handle-errors = { path = "handle-errors", version = "0.1.0" }

# 链路追踪
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"

# 数据库
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }

# 外部api库
reqwest = { version = "0.11", features = ["json"] }

# 中间件
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"

# 随机数
rand = "0.8"
# 加密
rust-argon2 = "1.0"
paseto = "2.0"

# 时间
chrono = "0.4.19"

# .env
dotenv = "0.15.0"

# 命令行
clap = { version = "3.1.7", features = ["derive"] }

proc-macro2 = "1.0.37"
openssl = { version = "0.10.32", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"